# neroshop

./: .gitignore  .gitmodules  .woodpecker.yml  CMakeLists.txt  LICENSE  about.txt  build.sh  readme.md  summary.txt  todo.txt
.github/workflows/: debug.yml  default.yml  release.yml
cmake/: BuildShared.cmake  BuildType.cmake  DetectCompilerVersion.cmake  DetectOS.cmake  DisallowInSourceBuilds.cmake  FindZMQ.cmake  TargetArch.cmake  dokun-ui.patch  get_compiler_flags.cmake  monero-alpine-system-miniupnpc.patch  monero-cpp.patch  monero-install-targets.patch
doc/: build.txt  consensus.txt  development.txt  escrow.txt  levin.txt  plan.txt  search.txt  todo.txt
docker/: alpine  debian
include/: buyer.hpp  cart.hpp  catalog.hpp  config.hpp  converter.hpp  database.hpp  db.hpp  db2.hpp  db_json.hpp  db_postgres.hpp  db_psql.hpp  db_sqlite3.hpp  debug.hpp  encryptor.hpp  icon.hpp  item.hpp  message.hpp  neroshop.hpp  order.hpp  qr.hpp  search_bar.hpp  seller.hpp  server.hpp  user.hpp  validator.hpp  wallet.hpp
include/database/: lmdb.hpp  postgresql.hpp  sqlite.hpp
include/deprecated/: address.hpp  inventory.hpp  loader.hpp  registry.hpp  test.hpp
src/: buyer.cpp  carrier.cpp  cart.cpp  cart.hpp  catalog.cpp  catalog.hpp  cli.cpp  client.cpp  client.hpp  config.hpp  converter.cpp  converter.hpp  daemon.cpp  database.cpp  database.hpp  db.cpp  db.hpp  db2.cpp  debug.hpp  encryptor.cpp  icon.cpp  item.cpp  logging.hpp  main.cpp  main_glfw.cpp  message.cpp  order.cpp  order.hpp  project_config.cpp.in  project_config.hpp.in  qr.cpp  qr.hpp  seller.cpp  server.cpp  server.hpp  user.cpp  user.hpp  validator.cpp  wallet.cpp  wallet.hpp
src/database/: lmdb.hpp  postgresql.hpp  sqlite.hpp
src/deprecated/: inventory.cpp  loader.cpp  registry.cpp
src/test/: main0.cpp  network_test.cpp
test/: CMakeLists.txt
test/network_test/: CMakeLists.txt  client.cpp  server.cpp
test/sys_network/: CMakeLists.txt  client.cpp  server.cpp
test/zmq_network/: CMakeLists.txt  cli.connect.55091  cli.license  cli.status.connected  cli.status.not_connected  cli.version  kill_daemon.cpp
